--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: rscc
 Section: misc
 Priority: extra
 Maintainer: Ronny Standtke <Ronny.Standtke@gmx.net>
-Build-Depends: debhelper (>= 7), ant-optional, junit, openjdk-6-jdk | sun-java6-jdk
+Build-Depends: debhelper (>= 7), ant-optional, junit, java-sdk
 Standards-Version: 3.8.0
 Homepage: http://www.imedias.ch/lernstick
 
 Package: rscc
 Architecture: all
-Depends: openjdk-7-jre | openjdk-6-jre | sun-java6-jre, xtightvncviewer, x11vnc, openssl, stunnel4
+Depends: java-runtime, xtightvncviewer, x11vnc, openssl, stunnel4
 Description: Remote Support Control Center
  A GUI for establishing and offering secure reverse VNC connections.
