--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+build/
+build-stamp                                                                                                                                                                                                                                                            
+configure-stamp                                                                                                                                                                                                                                                        
+debian/files                                                                                                                                                                                                                                                           
+debian/rscc/
+debian/rscc.debhelper.log                                                                                                                                                                                                                                              
+debian/rscc.substvars                                                                                                                                                                                                                                                  
+dist/
 nbproject/private/
-/build/
-/dist/
