--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ch.imedias</groupId>
+	<groupId>ch.fhnw</groupId>
 	<artifactId>rscc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Project dependant variables -->
+        <custom.path>ch/fhnw/lernstickwelcome</custom.path>
+        <custom.main.class>ch.fhnw.lernstickwelcome.Welcome</custom.main.class>
+        <custom.checkstyle>config/checkstyle.xml</custom.checkstyle>
+
+        <!-- Project independant variables -->
+        <custom.source>src/${custom.path}</custom.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- To make the output of the javadoc support utf-8 -->
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<project.maindir>${project.basedir}/src/main</project.maindir>
 	</properties>
 
-	<build>
-		<plugins>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
+	<build>
+        <sourceDirectory>${custom.source}</sourceDirectory>
+
+        <plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
@@ -24,70 +37,88 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<!-- Make JAR file executable -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<!-- the library files are stored in this path -->
-							<classpathPrefix>lib/</classpathPrefix>
-							<!-- this points to the main function -->
-							<mainClass>ch.fhnw.edu.rental.MovieRentalApplication</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-
-			<!-- Copy all of the libraries to the /lib directory of the JAR, so the dependencies are there to execute -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<!-- this directory should match the library folder from above -->
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>false</overWriteSnapshots>
-							<overWriteIfNewer>true</overWriteIfNewer>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- checkstyle plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
-				<configuration>
-					<configLocation>/src/main/config/swc_checks.xml</configLocation>
-					<encoding>UTF-8</encoding>
-					<consoleOutput>true</consoleOutput>
-					<failsOnError>true</failsOnError>
-					<!-- Added failOnViolation to meet exercise needs -->
-					<failOnViolation>true</failOnViolation>
+            <!-- checkstyle plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+		    <dependencies>
+            				<dependency>
+					      <groupId>com.puppycrawl.tools</groupId>
+					      <artifactId>checkstyle</artifactId>
+					      <version>7.2</version>
+					</dependency>
+				</dependencies>
+                <configuration>
+                    <configLocation>${custom.checkstyle}</configLocation>
+                    <encoding>UTF-8</encoding>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <!-- don't have the build fail because of checkstyle yet
+                    <failOnViolation>true</failOnViolation>
 					<violationSeverity>warning</violationSeverity>
-				</configuration>
-				<executions>
-					<execution>
-						<id>verify-style</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+					-->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>verify-style</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- add resources like *.properties files to the build -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.12</version>
+                <executions>
+                    <execution>
+                        <id>add-resource</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>add-resource</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>${custom.source}</directory>
+                                    <targetPath>${custom.path}</targetPath>
+                                    <excludes>
+                                        <exclude>*.java</exclude>
+                                        <exclude>/**/</exclude>
+                                    </excludes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Package all the dependencies into the JAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${custom.main.class}</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
@@ -98,10 +129,13 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.17</version>
 				<configuration>
-					<configLocation>${project.maindir}/config/swc_checks.xml</configLocation>
-					<violationSeverity>warning</violationSeverity>
-					<failOnViolation>true</failOnViolation>
-					<consoleOutput>true</consoleOutput>
+                    <configLocation>${custom.checkstyle}</configLocation>
+                    <violationSeverity>warning</violationSeverity>
+                    <!-- don't have the build fail because of checkstyle yet
+                    <failOnViolation>true</failOnViolation>
+                    -->
+                    <consoleOutput>true</consoleOutput>
+
 				</configuration>
 			</plugin>
 
@@ -110,7 +144,6 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.4</version>
 				<configuration>
-					<!-- Doctitle and footer -->
 					<charset>UTF-8</charset>
 				</configuration>
 				<reportSets>
@@ -127,14 +160,13 @@
 
 	<dependencies>
 		<!-- dbus.jar -->
-        <!-- https://mvnrepository.com/artifact/com.github.bdeneuter/dbus-java -->
-        <dependency>
-            <groupId>com.github.bdeneuter</groupId>
-            <artifactId>dbus-java</artifactId>
-            <version>[2.7,]</version>
-        </dependency>
+		<dependency>
+			<groupId>com.github.bdeneuter</groupId>
+			<artifactId>dbus-java</artifactId>
+			<version>[2.7,]</version>
+		</dependency>
 
-        <!-- derby.jar -->
+		<!-- derby.jar -->
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
@@ -144,16 +176,9 @@
 
 		<!-- hexdump.jar -->
 		<dependency>
-		    <groupId>org.abstractj.libmatthew</groupId>
-		    <artifactId>hexdump</artifactId>
-		    <version>[0.2.1,]</version>
-		</dependency>
-
-		<!-- jh.jar -->
-		<dependency>
-			<groupId>javax.jh</groupId>
-			<artifactId>jh</artifactId>
-			<version>[1.1.3,]</version>
+			<groupId>org.abstractj.libmatthew</groupId>
+			<artifactId>hexdump</artifactId>
+			<version>[0.2.1,]</version>
 		</dependency>
 
 		<!-- unix.jar -->
@@ -171,22 +196,13 @@
 			<scope>test</scope>
 		</dependency>
 
+        <!-- lernstickTools -->
 		<dependency>
-			<groupId>com.github.kennox</groupId>
+			<groupId>com.github.Kennox</groupId>
 			<artifactId>lernstickTools</artifactId>
-            <version>master-e6f60619ae-1</version>
+			<version>2</version>
 		</dependency>
 
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>freehep-releases</id>
-			<url>http://java.freehep.org/maven2/</url>
-		</repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-	</repositories>
 </project>
