--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<properties>
         <!-- Project dependant variables -->
         <custom.path>ch/imedias/rscc</custom.path>
-        <custom.main.class>ch.fhnw.rscc.RemoteSupportFrame</custom.main.class>
+        <custom.main.class>ch.imedias.rscc.RemoteSupportFrame</custom.main.class>
         <custom.checkstyle>config/checkstyle.xml</custom.checkstyle>
 
         <!-- Project independant variables -->
