--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,7 @@ fabric.properties
 .idea/
 *.iml
 
+## These resources are created during execution of "port_share.sh" and therefore should not be committed
+p2p.log
+delete.key
+get.key
