--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- mockito -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>[2.2.27,]</version>
+			<scope>test</scope>
+		</dependency>
+
         <!-- lernstickTools -->
 		<dependency>
 			<groupId>com.github.Kennox</groupId>
