--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,15 @@
 			<scope>test</scope>
 		</dependency>
 
-        <!-- lernstickTools -->
+		<!-- mockito -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>[2.2.27,]</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- lernstickTools -->
 		<dependency>
 			<groupId>com.github.Kennox</groupId>
 			<artifactId>lernstickTools</artifactId>
