--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,11 +3,16 @@ excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 javac.external.vm=false
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.8
 annotation.processing.processors.list=
 javadoc.noindex=false
@@ -21,7 +26,7 @@ build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=-Xlint\:unchecked
-main.class=ch.imedias.rscc.RemoteSupportFrame
+main.class=ch.imedias.rsccfx.RsccApp
 dist.jar=${dist.dir}/rscc.jar
 javac.test.processorpath=${javac.test.classpath}
 javadoc.use=true
@@ -36,7 +41,11 @@ application.vendor=ronny
 junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 jar.compress=false
 build.generated.dir=${build.dir}/generated
 javadoc.private=false
