--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,13 @@
 			<version>[2.7,]</version>
 		</dependency>
 
+        <!-- javafxsvg.jar -->
+        <dependency>
+            <groupId>de.codecentric.centerdevice</groupId>
+            <artifactId>javafxsvg</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
 		<!-- derby.jar -->
 		<dependency>
 			<groupId>org.apache.derby</groupId>
