--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,28 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+    		    <groupId>org.codehaus.mojo</groupId>
+    		    <artifactId>exec-maven-plugin</artifactId>
+    		    <version>1.2.1</version>
+    		    <executions>
+    		        <execution>
+    		            <id>create-strings</id>
+    		            <phase>generate-sources</phase>
+    		            <goals>
+    		                <goal>exec</goal>
+    		            </goals>
+    		        </execution>
+    		    </executions>
+    		    <configuration>
+    		        <executable>python</executable>
+    		        <arguments>
+   		            	<argument>generateStringsClass.py</argument>
+                        <argument>Bundle</argument>
+   		        	</arguments>
+   		    	</configuration>
+   			</plugin>
+
             <!-- checkstyle plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -55,9 +77,9 @@
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
-		    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+		    		<includeTestSourceDirectory>true</includeTestSourceDirectory>
                     <failOnViolation>true</failOnViolation>
-		    <violationSeverity>warning</violationSeverity>
+		    		<violationSeverity>warning</violationSeverity>
                 </configuration>
                 <executions>
                     <execution>
