--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,13 @@
 			<version>2</version>
 		</dependency>
 
+		<!-- javafxsvg.jar -->
+		<dependency>
+			<groupId>de.codecentric.centerdevice</groupId>
+			<artifactId>javafxsvg</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
