--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
         <!-- Project dependant variables -->
         <custom.path>ch/imedias/rsccfx</custom.path>
         <custom.main.class>ch.imedias.rsccfx.RsccApp</custom.main.class>
+        <custom.src.path>src</custom.src.path>
+        <custom.test.path>test</custom.test.path>
+        <custom.resources.path>resources</custom.resources.path>
         <custom.checkstyle>config/checkstyle.xml</custom.checkstyle>
         <custom.checkstyle.suppressions>config/checkstyle-suppressions.xml</custom.checkstyle.suppressions>
 
@@ -27,8 +30,13 @@
     </repositories>
 
     <build>
-        <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>test</testSourceDirectory>
+        <sourceDirectory>${custom.src.path}</sourceDirectory>
+        <testSourceDirectory>${custom.test.path}</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>${custom.resources.path}</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
