--- a/pom.xml
+++ b/pom.xml
@@ -256,5 +256,12 @@
             <version>master</version>
         </dependency>
 
+        <!-- Jsch to exchange files over scp-->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
+
     </dependencies>
 </project>
