--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,27 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Set permission on shell-scripts when starting app from IDE -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>process-classes</id>
+                        <phase>process-classes</phase>
+                        <configuration>
+                            <target>
+                                <chmod file="target/classes/docker-build_p2p/*" perm="744"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
