--- a/pom.xml
+++ b/pom.xml
@@ -280,5 +280,19 @@
             <version>master</version>
         </dependency>
 
+        <!-- ControlsFxSample -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx-samples</artifactId>
+            <version>8.40.12</version>
+        </dependency>
+
+        <!-- ControlsFX -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.40.12</version>
+        </dependency>
+
     </dependencies>
 </project>
