Refactored KeyServerIP and HTTP-Port as properties (to enabling bindings on them in GUI)  - Refactored RsccTests

--- a/pom.xml
+++ b/pom.xml
@@ -169,8 +169,34 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <configuration>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+
         </plugins>
     </build>
+
 
     <reporting>
         <plugins>
@@ -203,10 +229,13 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+
         </plugins>
     </reporting>
 
+
     <dependencies>
+
         <!-- dbus.jar -->
         <dependency>
             <groupId>com.github.bdeneuter</groupId>
