restricted JaCoCo to rsccfx, and made it appear in Maven report

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,9 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.9</version>
                 <configuration>
+                    <excludes>
+                        <exclude>ch/imedias/rscc/**/*.class</exclude>
+                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
@@ -235,6 +238,18 @@
                 </reportSets>
             </plugin>
 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <!-- select non-aggregate reports -->
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
         </plugins>
     </reporting>
 
