--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,8 @@
                 <version>2.17</version>
                 <configuration>
                     <configLocation>${custom.checkstyle}</configLocation>
+                    <suppressionsLocation>${custom.checkstyle.suppressions}</suppressionsLocation>
+                    <encoding>UTF-8</encoding>
                     <violationSeverity>warning</violationSeverity>
                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
                     <failOnViolation>true</failOnViolation>
