added proposition of more exclusions

--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,13 @@
                 <version>0.7.9</version>
                 <configuration>
                     <excludes>
+                        <!-- exclude non-JavaFX related files -->
                         <exclude>ch/imedias/rscc/**/*.class</exclude>
+                        <!-- exclude View classes, since views are not tested -->
+                        <exclude>/**/*View*.class</exclude>
+                        <!-- exclude RsccApp and Strings class, since those are not tested either -->
+                        <exclude>/**/*RsccApp*.class</exclude>
+                        <exclude>/**/*Strings*.class</exclude>
                     </excludes>
                 </configuration>
                 <executions>
