slightly tweaked exclusions so viewcontroller is still covered removed examplepresenter now that viewcontroller is implemented in every presenter class

--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
                         <!-- exclude non-JavaFX related files -->
                         <exclude>ch/imedias/rscc/**/*.class</exclude>
                         <!-- exclude View classes, since views are not tested -->
-                        <exclude>/**/*View*.class</exclude>
+                        <exclude>/**/*View.class</exclude>
                         <!-- exclude RsccApp and Strings class, since those are not tested either -->
                         <exclude>/**/*RsccApp*.class</exclude>
                         <exclude>/**/*Strings*.class</exclude>
