restricted JaCoCo-Remport to rsccfx, again specified comment on line 266

--- a/pom.xml
+++ b/pom.xml
@@ -249,10 +249,21 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <!-- exclude non-JavaFX related files -->
+                        <exclude>ch/imedias/rscc/**/*.class</exclude>
+                        <!-- exclude View classes, since views are not tested -->
+                        <exclude>/**/*View.class</exclude>
+                        <!-- exclude RsccApp and Strings class, since those are not tested either -->
+                        <exclude>/**/*RsccApp*.class</exclude>
+                        <exclude>/**/*Strings*.class</exclude>
+                    </excludes>
+                </configuration>
                 <reportSets>
                     <reportSet>
                         <reports>
-                            <!-- select non-aggregate reports -->
+                            <!-- Include the JaCoCo-standard-report in the Maven-report-->
                             <report>report</report>
                         </reports>
                     </reportSet>
