--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
                 </executions>
             </plugin>
 
+            <!-- Generates CodeCoverage Report -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
