SErverConfiguration is read from the file docker-build_p2p/ssh.rc and also saved there by calling keyServerSetup() (use.sh). No test here because its a private method.

--- a/resources/docker-build_p2p/ssh.rc
+++ b/resources/docker-build_p2p/ssh.rc
@@ -4,8 +4,11 @@
 ### the IP or DN of the p2p server
 p2p_server=86.119.39.89
 
+### the port of the http service in the p2p server
+http_port=800
+
 ### the port of the sshd service in the p2p server
-p2p_port=2201
+p2p_port=
 
 ### compress the ssh connections
 ### can be usefull only for slow connections
