--- a/resources/docker-build_p2p/ssh.rc
+++ b/resources/docker-build_p2p/ssh.rc
@@ -1,12 +1,13 @@
 #!/bin/bash
 ### variables for the configuration of a ssh tunnel
 
-### the IP or DN of the p2p server
+#### Connection setup
+### IP or DomainName of the p2p server
+### Port of the http service in the p2p server
 p2p_server=86.119.39.89
-
-### the port of the http service in the p2p server
 http_port=800
 
+#### Configuration received from th server
 ### the port of the sshd service in the p2p server
 p2p_port=
 
