--- a/pom.xml
+++ b/pom.xml
@@ -322,6 +322,19 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>[1.7.0RC4,]</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <version>[1.7.0RC4,]</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- lernstickTools -->
         <dependency>
             <groupId>com.github.Kennox</groupId>
