--- a/pom.xml
+++ b/pom.xml
@@ -351,5 +351,12 @@
             <version>master</version>
         </dependency>
 
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>[21.0,]</version>
+        </dependency>
+
     </dependencies>
 </project>
