Code cleanup, all own written classes almost checkstyle error free

--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,12 @@
             <version>master</version>
         </dependency>
 
+        <!-- Secure Reliable udp fom sourceforge
+        <dependency>
+            <groupId>net.sourceforge.projects</groupId>
+            <artifactId>rudp</artifactId>
+            <version>1.2.3</version>
+        </dependency>-->
 
     </dependencies>
 </project>
