--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,31 @@
 
     <reporting>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <configuration>
+                    <charset>UTF-8</charset>
+                    <sourcepath>${basedir}/src/ch/imedias/rsccfx</sourcepath>
+                    <sourceFileExcludes>
+                        <sourceFileExclude>**/rudp/**/*.java</sourceFileExclude>
+                    </sourceFileExcludes>
+
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <id>default</id>
+                        <reports>
+                            <report>javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -229,23 +254,7 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
-                <configuration>
-                    <charset>UTF-8</charset>
-                    <sourcepath>${basedir}/src/ch/imedias/rsccfx</sourcepath>
-                </configuration>
-                <reportSets>
-                    <reportSet>
-                        <id>default</id>
-                        <reports>
-                            <report>javadoc</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
+
 
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -257,6 +266,7 @@
                         <exclude>ch/imedias/rscc/**/*.class</exclude>
                         <!-- exclude View and Presenter classes, since views and presenter are not tested -->
                         <exclude>ch/imedias/rsccfx/view/**/*.class</exclude>
+                        <exclude>ch/imedias/rsccfx/model/iceutils/rudp/**/*.class</exclude>
                         <!-- exclude RsccApp and Strings class, since those are not tested either -->
                         <exclude>/**/*RsccApp*.class</exclude>
                         <exclude>/**/*Strings*.class</exclude>
