POM excluded rudp from Jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,8 @@
                         <exclude>ch/imedias/rscc/**/*.class</exclude>
                         <!-- exclude View and Presenter classes, since views and presenter are not tested -->
                         <exclude>ch/imedias/rsccfx/view/**/*.class</exclude>
+                        <!-- exclude Rudp, sice those classes are not tested -->
+                        <exclude>ch/imedias/rsccfx/model/iceutils/rudp/**/*.class</exclude>
                         <!-- exclude RsccApp and Strings class, since those are not tested either -->
                         <exclude>/**/*RsccApp*.class</exclude>
                         <exclude>/**/*Strings*.class</exclude>
@@ -266,6 +268,7 @@
                         <exclude>ch/imedias/rscc/**/*.class</exclude>
                         <!-- exclude View and Presenter classes, since views and presenter are not tested -->
                         <exclude>ch/imedias/rsccfx/view/**/*.class</exclude>
+                        <!-- exclude Rudp, sice those classes are not tested -->
                         <exclude>ch/imedias/rsccfx/model/iceutils/rudp/**/*.class</exclude>
                         <!-- exclude RsccApp and Strings class, since those are not tested either -->
                         <exclude>/**/*RsccApp*.class</exclude>
