--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -1,10 +1,11 @@
-Package: [[name]]
-Version: [[version]]
-Section: misc
+Package: rscc
+Version: 1.0
+Section: net
 Priority: optional
-Architecture: all
-Depends: jdk (>= 1.5)
-Maintainer: Torsten Curdt <torsten@something.com>
-Description: jetty java servlet container
+Architecture: Linux
+Depends: jdk (>= 1.8)
+Maintainer: Ronny Standtke <ronny.standtke@fhnw.ch>
+Description: Remote support tool for the Lernstick system.
+Homepage: http://lernstick.ch
 Distribution: development
-Depends: default-jre | java6-runtime
+Depends: default-jre | java8-runtime | debian
