--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
                                     <type>file</type>
                                     <mapper>
                                         <type>perm</type>
-                                        <prefix>/lib/live/mount/rootfs/filesystem.squashfs/usr/bin</prefix>
+                                        <prefix>/usr/bin</prefix>
                                     </mapper>
                                 </data>
                             </dataSet>
