defined controlDir, so that it takes from new folder called debianfx

--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,7 @@
                                     </mapper>
                                 </data>
                             </dataSet>
+                            <controlDir>debianfx</controlDir>
                         </configuration>
                     </execution>
                 </executions>
