--- a/pom.xml
+++ b/pom.xml
@@ -380,5 +380,13 @@
             <version>21.0</version>
         </dependency>
 
+        <!-- FontAwesomeFX -->
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-commons</artifactId>
+            <version>[8.15,]</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 </project>
