--- a/pom.xml
+++ b/pom.xml
@@ -262,10 +262,12 @@
                             <goal>jdeb</goal>
                         </goals>
                         <configuration>
+                            <deb>${project.build.directory}/rsccfx.deb</deb>
                             <dataSet>
                                 <data>
                                     <src>${project.build.directory}/${project.build.finalName}.jar</src>
                                     <type>file</type>
+                                    <dst>rsccfx.deb</dst>
                                     <mapper>
                                         <type>perm</type>
                                         <prefix>/usr/bin</prefix>
